--- a/람다식.md
+++ b/람다식.md
@@ -1,15 +1,26 @@
-#Lamda expression
+# Lamda expression
 
-The compiler understands that the object must be an instance of EventHandler<ActionEvent>
-그리고 EventHander는 ActionEvent타입의 파라미터를 받는 handle이라는 단 하나의 메소드만을 정의하고 있기 때문에 람다식을 사용하는 인터페이스는 무조건 하나의 추상 메소드만을 포함해야 한다.
-Ex)
+- The compiler understands that the object must be an instance of EventHandler<ActionEvent>
+- EventHander는 ActionEvent타입의 파라미터를 받는 handle이라는 단 하나의 메소드만을 정의하고 있기 때문에 람다식을 사용하는 인터페이스는 무조건 하나의 추상 메소드만을 포함해야 한다.
+    (Introduction to Java Programming(Y.Daniel Liang))
+```
 btNew.setOnAction((ActionEvent e) -> { System.out.println(“Process New”); });
 btOpen.setOnAction((e) -> { System.out.println(“Process Open”); });
 btSave.setOnAction(e-> {System.out.println(“Process Save”); });
-(Introduction to Java Programming(Y.Daniel Liang))
+```
+  
 
-자바에서 람다식을 사용하기 위해서 Stream Api 를 사용할 수 있음.
-List.stream().map(String::toUpperCase); List.stream().map(s->s.toUpperCase()); postsRepository.stream().map(PostsListResponseDto::new);
-Map : 특정 조건에 해당하는 값으로 변환 그 외 filter / sorted 등이 있음. (https://dpdpwl.tistory.com/81)
-Stream의 마지막 단계에 쓰이는 Collect() 메소드:
-    - 데이터 처리에 마지막에 원하는 형태로 변환해주는 역할       ex) stream().collect(Collectors.toList()) , collect(summarizingDouble()), collect(averagingDouble()), collect(maxBy()); collect(groupingBy()), collect(partitioningBy());
+- 자바에서 람다식을 사용하기 위해서 Stream Api 를 사용할 수 있음.
+```
+List.stream().map(String::toUpperCase);
+List.stream().map(s->s.toUpperCase());
+postsRepository.stream().map(PostsListResponseDto::new);
+```   
+- Map : 특정 조건에 해당하는 값으로 변환 그 외 filter / sorted 등이 있음.
+    (https://dpdpwl.tistory.com/81)
+    
+- Stream의 마지막 단계에 쓰이는 Collect() 메소드: 데이터 처리에 마지막에 원하는 형태로 변환해주는 역할      
+```
+stream().collect(Collectors.toList()) , collect(summarizingDouble()), collect(averagingDouble()), collect(maxBy()); 
+collect(groupingBy()), collect(partitioningBy());
+```
