--- a/어노테이션정리.md
+++ b/어노테이션정리.md
@@ -1,9 +1,9 @@
 # 스프링 부트와 AWS로 혼자 구현하는 웹서비스 내 어노테이션 정리
 
-`@RunWith(SpringRunner.class)`
-테스트를 진행할 때 JUnit에 내장된 실행자 외에 다른 실행자를 실행시킴
-Spring Runner라는 스프링 실행자를 사용
-스프링 부트 테스트와 JUnit 사이에 연결자 역할을 함
+`@RunWith(SpringRunner.class)` <br/>
+- 테스트를 진행할 때 JUnit에 내장된 실행자 외에 다른 실행자를 실행시킴
+- Spring Runner라는 스프링 실행자를 사용
+- 스프링 부트 테스트와 JUnit 사이에 연결자 역할을 함
 
 `@WebMvcTest`
  - Web에 집중할 수 있는 어노테이션
@@ -11,38 +11,36 @@ Spring Runner라는 스프링 실행자를 사용
  - @Service, @Component, @Repository 등은 사용할 수 없음
  - JPA 기능 사용 불가
 
-`@SpringBootTest` 
-TestRestTemplate 객체와 함께 사용하면 JPA 기능 함께 사용 가능
-@SpringBootApplication을 찾아서 테스트를 위한 빈들을 다 생성
-@RunWith(SpringRunner.class)랑 같이 써야 함.
-   ※  테스트 시 사용하는 객체 
-       1. MOCK : mock servlet environment. 내장 톰캣 구동 안함.
-       2. TestRestTemplate : 내장톰캣 실행됨.
+`@SpringBootTest` <br/>
+- TestRestTemplate 객체와 함께 사용하면 JPA 기능 함께 사용 가능
+- @SpringBootApplication을 찾아서 테스트를 위한 빈들을 다 생성
+- @RunWith(SpringRunner.class)랑 같이 써야 함.
+   - 테스트 시 사용하는 객체 
+       - MOCK : mock servlet environment. 내장 톰캣 구동 안함.
+       - TestRestTemplate : 내장톰캣 실행됨.
 
-`@Getter`
-선언된 모든 필드의 get 메소드를 생성
+`@Getter`<br/>
+- 선언된 모든 필드의 get 메소드를 생성
 
-`@RequiredArgsConstructor`
-선언된 모든 final 필드가 포함된 생성자를 생성
-final이 없는 필드는 생성자에 포함되지 않는다.
+`@RequiredArgsConstructor`<br/>
+- 선언된 모든 final 필드가 포함된 생성자를 생성
+- final이 없는 필드는 생성자에 포함되지 않는다.
 
-`@asserThat`
-assertJ라는 테스트 검증 라이브러리의 검증 메소드
-검증하고 싶은 대상을 메소드 인자로 받음.
-assertEqual( 원본, 비교대상 ) > assertThat( 원본, isEqualTo(비교대상))
-메소드 체이닝이 지원됨.
+`@asserThat`<br/>
+- assertJ라는 테스트 검증 라이브러리의 검증 메소드
+- 검증하고 싶은 대상을 메소드 인자로 받음.
+- assertEqual( 원본, 비교대상 ) > assertThat( 원본, isEqualTo(비교대상))
+- 메소드 체이닝이 지원됨.
 
-`@RequestMapping`
-- HTTP testMethods를 테스트 하기 위해
-   RequestMapping(value=“/getList”, method = {RequestMethod.POST}) 를 사용하던것을 세분화.
+`@RequestMapping`<br/>
+- HTTP testMethods를 테스트 하기 위해 RequestMapping(value=“/getList”, method = {RequestMethod.POST}) 를 사용하던것을 세분화.<br/>
+- @PostMapping / @GetMapping / @PutMapping / @DeleteMapping / @PatchMapping
 
-@PostMapping / @GetMapping / @PutMapping / @DeleteMapping / @PatchMapping
+`@MappedSuperclass`<br/>
+- 객체간에 공유 되는 정보를 부모 클래스로정의해두고 자식 클래스에서는해당클래스를 상속만 받아서 사용.
+- 부모클래스에 적어주는 어노테이션임.
+- 자식 클래스와 연관된 db에 실제 칼럼이 생성되지는 않지만 부모 클래스의 필드들도 칼럼으로 인식하도록 함.
 
-`@MappedSuperclass`
-객체간에 공유 되는 정보를 부모 클래스로정의해두고 자식 클래스에서는해당클래스를 상속만 받아서 사용.
-부모클래스에 적어주는 어노테이션임.
-자식 클래스와 연관된 db에 실제 칼럼이 생성되지는 않지만 부모 클래스의 필드들도 칼럼으로 인식하도록 함.
-
-`@EntityListener(AuditingEntityListener.class)`
-EntityListener : Entity를 DB에 저장하기 전에 콜백을 사용자가 지정할 수 있게 해주는 어노테이션.
-AuditingEntityListener 클래스 : Spring Date java에서 시간에 대하 자동으로 데이터를 넣어주는 클래스.(audit : 감시/관리하다)
+`@EntityListener(AuditingEntityListener.class)`<br/>
+- EntityListener : Entity를 DB에 저장하기 전에 콜백을 사용자가 지정할 수 있게 해주는 어노테이션.
+- AuditingEntityListener 클래스 : Spring Date java에서 시간에 대하 자동으로 데이터를 넣어주는 클래스.(audit : 감시/관리하다)
