--- a/어노테이션정리.md
+++ b/어노테이션정리.md
@@ -44,3 +44,7 @@
 `@EntityListener(AuditingEntityListener.class)`<br/>
 - EntityListener : Entity를 DB에 저장하기 전에 콜백을 사용자가 지정할 수 있게 해주는 어노테이션.
 - AuditingEntityListener 클래스 : Spring Date java에서 시간에 대하 자동으로 데이터를 넣어주는 클래스.(audit : 감시/관리하다)
+
+`@EnableWebSecurity`
+- Spring Security 설정을 활성화
+
