--- a/어노테이션정리.md
+++ b/어노테이션정리.md
@@ -45,6 +45,14 @@
 - EntityListener : Entity를 DB에 저장하기 전에 콜백을 사용자가 지정할 수 있게 해주는 어노테이션.
 - AuditingEntityListener 클래스 : Spring Date java에서 시간에 대하 자동으로 데이터를 넣어주는 클래스.(audit : 감시/관리하다)
 
-`@EnableWebSecurity`
+`@EnableWebSecurity`<br/>
 - Spring Security 설정을 활성화
 
+`@Target(ElementType.PARAMETER)`<br/>
+- 어노테이션이 부착될 수 있는 타입을 지정
+-  type = Parameter이므로 메소드의 파라미터로 선언된 객체에서만 사용할 수 있음
+-  그 외 constructor, method, field, annotation, local variable, package
+
+`@Retention(RetentionPolicy.RUNTIME)`<br/>
+- ex. LoginUser.java라는 인터페이스 내에 작성 > LoginUser라는 파일을 어노테이션 클래스로 정의함
+- LoginUser라는 어노테이션을 이제 사용할 수 있음.
