--- a/어노테이션정리.md
+++ b/어노테이션정리.md
@@ -56,3 +56,7 @@
 `@Retention(RetentionPolicy.RUNTIME)`<br/>
 - ex. LoginUser.java라는 인터페이스 내에 작성 > LoginUser라는 파일을 어노테이션 클래스로 정의함
 - LoginUser라는 어노테이션을 이제 사용할 수 있음.
+
+`@WithMockUser`<br/>
+- 인증된 모의(가짜) 사용자를 만들어서 사용함.
+- ex. @WithMockUser(roles="USER") : user권한을 가진 사용자가 API를 요청하는 것과 동일한 효과를 가지게 됨.
